--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Plugin for creating sitemap.xml after Sveltekit build. To be used with @ivorgri/sveltekit-pluggable-static-adapter",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "eslint . --ext .ts",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "build": "npm run lint && npm run format && tsc"
   },
   "repository": {
     "type": "git",
@@ -18,6 +21,16 @@
   },
   "homepage": "https://github.com/ivorgri/sveltekit-pluggable-static-adapter-sitemap-plugin#readme",
   "devDependencies": {
+    "@types/imagemin": "^8.0.0",
+    "@types/imagemin-webp": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.12.0",
+    "@typescript-eslint/parser": "^5.12.0",
+    "eslint": "^8.9.0",
+    "imagemin": "^8.0.1",
+    "imagemin-webp": "^7.0.0",
+    "prettier": "^2.5.1",
+    "tiny-glob": "^0.2.9",
     "typescript": "^4.5.5"
-  }
+  },
+  "files": ["lib/**/*"]
 }
