--- a/package.json
+++ b/package.json
@@ -21,16 +21,15 @@
   },
   "homepage": "https://github.com/ivorgri/sveltekit-pluggable-static-adapter-sitemap-plugin#readme",
   "devDependencies": {
-    "@types/imagemin": "^8.0.0",
-    "@types/imagemin-webp": "^7.0.0",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "^8.9.0",
-    "imagemin": "^8.0.1",
-    "imagemin-webp": "^7.0.0",
     "prettier": "^2.5.1",
     "tiny-glob": "^0.2.9",
-    "typescript": "^4.5.5"
+    "typescript": "^4.5.5",
+    "xmlbuilder2": "^3.0.2"
   },
-  "files": ["lib/**/*"]
+  "files": [
+    "lib/**/*"
+  ]
 }
