--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "eslint . --ext .ts",
     "format": "prettier --write \"src/**/*.ts\"",
     "build": "npm run lint && npm run format && tsc",
-    "prepublishOnly" : "npm run lint",
-    "prepare" : "npm run build",
-    "preversion" : "npm run lint",
-    "version" : "npm run format && git add -A src",
-    "postversion" : "git push && git push --tags"
+    "prepublishOnly": "npm run lint",
+    "prepare": "npm run build",
+    "preversion": "npm run lint",
+    "version": "npm run format && git add -A src",
+    "postversion": "git push && git push --tags"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ivorgri/sveltekit-pluggable-static-adapter-sitemap-plugin.git"
   },
-  "keywords": ["sveltekit","static adapter","sitemap"],
+  "keywords": [
+    "sveltekit",
+    "static adapter",
+    "sitemap"
+  ],
   "author": "Ivor Grisel (@ivorgri)",
   "license": "ISC",
   "bugs": {
