--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "sitemap"
   ],
   "author": "Ivor Grisel (@ivorgri)",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/ivorgri/sveltekit-pluggable-static-adapter-sitemap-plugin/issues"
   },
@@ -36,10 +36,12 @@
     "eslint": "^8.9.0",
     "prettier": "^2.5.1",
     "tiny-glob": "^0.2.9",
-    "typescript": "^4.5.5",
-    "xmlbuilder2": "^3.0.2"
+    "typescript": "^4.5.5"
   },
   "files": [
     "lib/**/*"
-  ]
+  ],
+  "dependencies": {
+    "xmlbuilder2": "^3.0.2"
+  }
 }
